# Valuation-Agent

./: .gitignore  CLAUDE.md  LICENSE  README.md  download_damodaran.sh  pyproject.toml  run_valuation.py
.github/workflows/: tests.yml  valuation.yml
config/prompts/: classifier.md  cross_validation.md  growth_narrative.md  orchestrator.md  report.md
data/damodaran/cash_flow_estimation/: goodwill.xls  goodwillChina.xls  goodwillEurope.xls  goodwillGlobal.xls  goodwillIndia.xls  goodwillJapan.xls  goodwillRest.xls  goodwillemerg.xls
data/damodaran/growth_rate_estimation/: fundgr.xls  fundgrChina.xls  (+11 more)
docs/: review-prompt.md
docs/research/: dcf-patterns-from-examples.md
knowledge/: learning_plan.json  resource_map_enriched.csv
src/valuation/: __init__.py  context.py
tests/: conftest.py  test_adjustments.py  test_api_client.py  test_bounds.py  test_classifier.py  test_confidence.py  test_context.py  test_cross_validator.py  test_damodaran_loader.py  test_dcf.py  test_dcf_v2.py  test_distress.py  test_excel_dynamic.py  test_excess_returns.py  test_fcfe.py  test_golden.py  test_growth_estimator.py  test_industry_mapper.py  test_integration_sprint1.py  test_integration_sprint2.py  test_integration_sprint3.py  test_integration_validation.py  test_model_router.py  test_normalization.py  test_normalizer.py  test_pre_engine.py  test_relative.py  test_report_generator.py  test_reverse_dcf.py  test_risk_assessor.py  test_schedules.py  test_sourced.py  test_wrds_client.py
tests/golden/: 3m_precrisis.json  coned.json  goldman.json
tools/: mcp_gemini_server.py
(+39 files in other folders)
